# detect_yolo_cpu_v2

./: .env.sample  .gitignore  LOT2_INSTRUCTIONS.md  README.md  chatgpt_prompt.md  download_yolo_model.py  kanban.md  pyproject.toml  synthese_detect_yolo_cpu_v2_COMPLETE.md
config/: config.sample.yaml
src/: config_loader.py  detector.py  file_watcher.py  image_annotator.py  logger.py  main.py  message_builder.py  mqtt_publisher.py  utils.py  zone_manager.py
tests/: test_config_loader.py  test_detection_batch.py  test_file_watcher.py  test_image_annotator.py  test_load_config.py  test_message_builder.py  test_mqtt_integration.py  test_mqtt_publisher.py  test_utils.py  test_zone_manager.py
